# Music-Matcher

./: .cache  .gigignore  1.json  README.md  complete_music_db_v2.json  fetch_fer2013_with_genres.py  finalize_db.py  genius.py  import_songs.py  import_to_django.py  importsongs.py  lyrics.json  main.py  mini_xception_best.keras  predict_test.py  pyproject.toml  select_200_songs.py  songdata.json  spotify.py  thai_songs_balanced_200.json  thai_songs_fer2013.json  thai_songs_labeled_final.json  thai_songs_spotify_only.json  train_emotion_tfidf.py  train_model.py  train_modelV1.py  train_modelV2.py
PlanUML/: activity.puml  state.puml
accounts/: admin.py  apps.py  models.py  urls.py
accounts/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py  0003_alter_user_groups_alter_user_user_permissions.py
core/: settings.py  urls.py
matcher/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
matcher/fixtures/: emotions.json  songs.json
matcher/management/commands/: import_users_csv.py  import_workbook.py  seed_music.py
matcher/migrations/: 0001_initial.py  0002_album_cover_url.py  0002_alter_album_artist_alter_artist_name_and_more.py  0002_alter_artist_slug.py  0002_remove_song_audio_features_song_lyrics_and_more.py  0003_alter_song_genres.py  0003_song_audio_features.py  0004_emotion_songemotion.py  0005_appuser.py
matcher/templates/: base.html
matcher/templates/matcher/: add_song.html  admin_behavior.html  admin_category_management.html  admin_dashboard.html  admin_login.html  admin_model.html  admin_panel.html  admin_sidebar.html  admin_song_database.html  admin_user_management.html  artist_detail.html  base.html  behavior_analysis.html  browsesong.html  category_management.html  category_songs.html  edit_profile.html  history.html  home.html  landing.html  login.html  match_result.html  model_management.html  playlist_detail.html  profile.html  scan.html  signup.html  song_confirm_delete.html  song_database.html  song_detail.html  song_form.html  song_list.html  user_management.html
