[project]
name = "music-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "fake-useragent>=2.2.0",
    "google-generativeai>=0.8.5",
    "joblib>=1.5.2",
    "lyricsgenius>=3.7.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.10",
    "pythainlp>=5.1.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "spotify>=0.10.2",
    "spotipy>=2.25.1",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "xgboost>=3.1.2",
    "youtube-search-python>=1.6.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-extensions>=4.1",
    "flake8>=7.3.0",
    "ipython>=9.5.0",
    "isort>=6.0.1",
]
